--- a/CSS/style.css
+++ b/CSS/style.css
@@ -56,7 +56,7 @@ h1{
 }
 
 .paginacion ul .active a{
-	background: #ce7f68;
+	background: #cc8f3c;
 }
 .paginacion ul .disabled{
 	background: #c8c8c8;
